<resources>
    <string name="app_name">StepNCount</string>
    <string name="btn">Continue</string>
    <string name="editTxt5" />
    <string name="tv_gender">Gender</string>
    <string name="tv_year">Year of birth</string>
    <string name="tv_weight">Weight (kg)</string>
    <string name="tv_height">Height (cm)</string>
    <string name="tv_step">Steps</string>
    <string name="tv_cal">Energy Expenditure (Kcal)</string>
    <string name="tv_listGoals">Goals</string>
    <string name="tv_config">Configuration</string>
    <string name="send">Send</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="title_connected_to">connected to</string>
    <string name="title_not_connected">not connected</string>
    <string name="tv_dist">Distance (km)</string>
    <string name="tv_time">Time (h)</string>
    <string name="menu_settings">Title</string>
    <string name="tv_step_height">Step Height (cm)</string>
    <string name="title_activity_bluetooth_test">BluetoothTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>