<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="@dimen/material_emphasis_medium"
    android:orientation="vertical"
    tools:context=".ConfigActivity"
    style="@style/Screen"> <!-- To change ColorScheme access themes.xml -->

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/tv_config"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:text="@string/tv_gender"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="Female"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/Text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_year"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="2003"
                android:inputType="date|textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/Text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_weight"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTxt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="55"
                android:imeOptions="actionNext"
                android:inputType="number|textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/Text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_height"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTxt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="160"
                android:imeOptions="actionNext"
                android:inputType="number|textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/Text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_step"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTxt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="20"
                android:imeOptions="actionDone"
                android:inputType="number|textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/Text" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Btn"
        android:text="@string/btn" />

</LinearLayout>